# femto

./: .gitignore  .taurignore  LICENSE  README.ja.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: CONFIG.md  SPEC.md  SPEC_REVIEW.md  SYNTAX_HIGHLIGHT_SPEC.md  config.example.yaml  walkthrough.md
src/: main.ts
src-tauri/: .taurignore  Cargo.toml  check_output.txt  hoge.md  hoge.md~  hoge.txt  hoge.txt~  hoge2.txt  hogehoge.txt  hogehoge2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/editor/: buffer.rs  cursor.rs  edit.rs  mod.rs  search.rs  state.rs  undo.rs
src/editor/: commands.ts  config.ts  keybindings.ts  minibuffer.ts  syntax.ts  types.ts  ui.ts  visual_line.test.ts  visual_line.ts
src/styles/: main.css
